sets up contact email

--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -29,7 +29,7 @@
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Message</label>
-                <%= message_form.text_area :content, class: 'form-control', id: 'message', rows: 5, placeholder: "Message", required: true, "data-validation-required-message" => "Please enter a message." %>
+                <%= message_form.text_area :content, class: 'form-control', id: 'content', rows: 5, placeholder: "Message", required: true, "data-validation-required-message" => "Please enter a message." %>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
